# tongsim

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  lint.yml
docs/: index.md  index.zh.md
docs/api/: arena.md  arena.zh.md  capture.md  capture.zh.md  demorl.md  demorl.zh.md  grpc.md  grpc.zh.md  index.md  index.zh.md  math.md  math.zh.md  runtime.md  runtime.zh.md  voxel.md  voxel.zh.md
docs/architecture/: client.md  client.zh.md  data_flow.md  data_flow.zh.md  platform_overview.md  platform_overview.zh.md  server.md  server.zh.md
docs/extra/: lang-toggle.css
docs/guides/: asset_pipeline.md  asset_pipeline.zh.md  capture.md  capture.zh.md  multilevel.md  multilevel.zh.md  procedural_animation.md  procedural_animation.zh.md  ue_packaging.md  ue_packaging.zh.md  voxel_perception.md  voxel_perception.zh.md
docs/quickstart/: client_server.md  client_server.zh.md  environment.md  environment.zh.md  first_simulation.md  first_simulation.zh.md
docs/tutorial/multi_agent_coop/: task_overview.md
docs/tutorial/multi_agent_nav/: quick_start.md  task_overview.md  training.md
docs/tutorial/single_agent_nav/: quick_start.md  quick_start.zh.md  task_overview.md  task_overview.zh.md  training.md  training.zh.md
examples/: capture_demo.py  multilevel_parallel.py  query_navigation.py  quickstart_demo.py  voxel.py
examples/marl/: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
examples/marl/doc/: MACSR.md
examples/marl/example/: train.py
examples/marl/example/config/: basic.yaml  ippo.yaml  mappo.yaml
examples/marl/xuance/: __init__.py
examples/marl/xuance/common/: __init__.py  common_tools.py  memory_offline.py  (+5 more)
examples/rl_nav/: README.md  README.zh.md  collect_task.py  main.py  run.py
examples/rl_nav/common/: high_level_policy.py  make_model.py  manual.py  para.py  utils.py
protobuf/tongsim_lite_protobuf/: arena.proto  capture.proto  common.proto  demo_rl.proto  object.proto  utils.proto  voxel.proto
scripts/: fetch_unreal_content.py  generate_pb2.py
src/tongsim/: __init__.py  logger.py  tongsim.py  version.py
src/tongsim/core/: async_loop.py  world_context.py
src/tongsim/entity/: __init__.py  entity.py  mixin.py
src/tongsim/manager/: utils.py
src/tongsim/math/: __init__.py
src/tongsim/type/: camera.py  rl_demo.py
unreal/: .gitignore
unreal/Content/: README.md
(+62 files in other folders)
